--- a/Assignment #11.ipynb
+++ b/Assignment #11.ipynb
@@ -18,26 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pdfminer'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24648/279601135.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mpdfminer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhigh_level\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mextract_text\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mtextdir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'C:\\\\Text\\\\PARKS&REMEDIATION\\\\pdf\\\\'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtextdir\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pdfminer'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pdfminer.high_level import extract_text\n",
     "import os\n",
     "\n",
-    "textdir = 'C:\\\\Text\\\\PARKS&REMEDIATION\\\\pdf\\\\'\n",
+    "textdir = 'D:\\\\D&D\\\\Hollywood Reporter\\\\Report\\eleven\\\\pdf\\\\'\n",
     "os.chdir(textdir)"
    ]
   },
@@ -133,13 +121,13 @@
     "\n",
     "words = vectorizer.get_feature_names()\n",
     "titles = np.array(titles)\n",
-    "x = v_documents[:, words.index('comics')]\n",
-    "y = v_documents[:, words.index('making')]\n",
+    "x = v_documents[:, words.index('audience')]\n",
+    "y = v_documents[:, words.index('fan')]\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "for title in set(titles):\n",
     "    ax.scatter(x[titles==title], y[titles==title], label=title)\n",
-    "ax.set(xlabel='comics', ylabel='making')\n",
+    "ax.set(xlabel='audience', ylabel='fan')\n",
     "plt.legend();"
    ]
   },
