--- a/Assignment #11.ipynb
+++ b/Assignment #11.ipynb
@@ -6,14 +6,31 @@
    "source": [
     "\n",
     "# Exercise Eleven: PCA\n",
-    "Drawing on our example from class and the discussion of PCA in Data-Sitters Club,\n",
+    "I initially drew on the class example and the discussion of PCA in the Data-Sitters Club, which enabled the code to flow from the beginning.\n",
     "\n",
-    "Import at least ten documents from files, using the OS module and any others relevant to process the text\n",
-    "Isolate a component (the example was nouns - try verbs or adjectives) using nltk and prepare appropriate sub-files for comparison on that axis\n",
-    "Load the documents and titles and run the contents through vectorize, using the provided boilerplate\n",
-    "Run a simple (2 word) vizualization comparing all texts\n",
-    "Run a full (PCA) vizualization comparing all texts using the provided PCA boilerplate. Note any interesting characteristics or outliers in a brief analysis\n",
-    "Bonus Challenge: This shows an example of collecting the texts from PDF files. Note it is also adjusted to handle shorter texts (rather than the novels from our previous example)"
+    "I went eleven toward importing documents from the use of .pdf files, mainly due to my usual use of research archives and libraries toward dissertational and assignment references.  In this case, I explored lager .pdf's in the form of the Hollywood Reporter, mainly for its texted pages of industry, but also to see if it was doable with the gigabytes that were needed to explore even amidst imagery and photos, which allowed for favoritism with the OS module to become relevant to process the text.\n",
+    "\n",
+    "Once this was established, the following directives were explored through the process:\n",
+    "\n",
+    "- Isolate a component (the example was nouns - try verbs or adjectives) using nltk and prepare appropriate sub-files for comparison on that axis\n",
+    "- Load the documents and titles and run the contents through vectorize, using the provided boilerplate\n",
+    "- Run a simple (2 word) visualization comparing all texts\n",
+    "- Run a full (PCA) visualization comparing all texts using the provided PCA boilerplate. Note any interesting characteristics or outliers in a brief\n",
+    "  analysis.\n",
+    "\n",
+    "Bonus Challenge: This shows an example of collecting the texts from PDF files. Note it is also adjusted to handle shorter texts (rather than the novels from our previous example)\n",
+    "\n",
+    "\n",
+    "(Karsdorp, Kestemont, and Riddell 126)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stage One: Import at least ten documents from files, using the OS module and any others relevant to process the text\n",
+    "\n",
+    "(Karsdorp, Kestemont, and Riddell 126)."
    ]
   },
   {
@@ -62,6 +79,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stage Two: Isolate a component (the example was nouns - try verbs or adjectives) using nltk and prepare appropriate sub-files for comparison on that axis\n",
+    "(Karsdorp, Kestemont, and Riddell 126)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 105,
    "metadata": {},
@@ -92,6 +117,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stage Three: Load the documents and titles and run the contents through vectorize, using the provided boilerplate\n",
+    "(Karsdorp, Kestemont, and Riddell 126)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 106,
    "metadata": {},
@@ -112,6 +145,14 @@
     "        title = filename.name.replace('-nouns.txt', '')\n",
     "        titles.append(f\"{title}\")\n",
     "    return documents, titles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stage Four: Run a simple (2 word) vizualization comparing all texts\n",
+    "(Karsdorp, Kestemont, and Riddell 126)"
    ]
   },
   {
@@ -139,6 +180,14 @@
     "\n",
     "print(v_documents.shape)\n",
     "print(vectorizer.get_feature_names()[:10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stage Five: Run a full (PCA) vizualization comparing all texts using the provided PCA boilerplate. Note any interesting characteristics or outliers in a brief analysis\n",
+    "(Karsdorp, Kestemont, and Riddell 126)."
    ]
   },
   {
@@ -229,6 +278,14 @@
     "            ha='center', va='center')\n",
     "\n",
     "ax.set(xlabel='PC1', ylabel='PC2');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus Stage: Depending on your interests, you might either try using an API to collect the texts rather than saving them to a directory, or you might use Bokeh to attempt an exportable visualization of some aspect of what you've collected.\n",
+    "(Karsdorp, Kestemont, and Riddell 126)."
    ]
   }
  ],
