--- a/Assignment #11.ipynb
+++ b/Assignment #11.ipynb
@@ -8,7 +8,7 @@
     "# Exercise Eleven: PCA\n",
     "I initially drew on the class example and the discussion of PCA in the Data-Sitters Club, which enabled the code to flow from the beginning.\n",
     "\n",
-    "I went eleven toward importing documents from the use of .pdf files, mainly due to my usual use of research archives and libraries toward dissertational and assignment references.  In this case, I explored lager .pdf's in the form of the Hollywood Reporter, mainly for its texted pages of industry, but also to see if it was doable with the gigabytes that were needed to explore even amidst imagery and photos, which allowed for favoritism with the OS module to become relevant to process the text.\n",
+    "I went eleven toward importing documents from the use of .pdf files, mainly due to my usual use of research archives and libraries toward dissertational and assignment references.  In this case, I explored lager .pdf's in the form of the Hollywood Reporter, mainly for its texted pages of industry, but also to see if it was doable with the gigabytes that were needed to explore even amidst imagery and photos, which allowed for favoritism with the OS module to become relevant to process the text as \"Codes are both reflective and predictive. They have a past and a future\" (Benjamin 6).\n",
     "\n",
     "Once this was established, the following directives were explored through the process:\n",
     "\n",
@@ -19,9 +19,7 @@
     "  analysis.\n",
     "\n",
     "Bonus Challenge: This shows an example of collecting the texts from PDF files. Note it is also adjusted to handle shorter texts (rather than the novels from our previous example)\n",
-    "\n",
-    "\n",
-    "(Karsdorp, Kestemont, and Riddell 126)."
+    "\n"
    ]
   },
   {
@@ -30,7 +28,9 @@
    "source": [
     "## Stage One: Import at least ten documents from files, using the OS module and any others relevant to process the text\n",
     "\n",
-    "(Karsdorp, Kestemont, and Riddell 126)."
+    "I chose the use of the everlong popular Hollywood Reporter, out of respect for the gossip and news of the film industry as well as a defined use of material as \"Modeling depends on source data\" (Drucker 171).\n",
+    "\n",
+    "This enabled the use of Stylometry, which emphasuzes the importance of modeling, to help \"answer questions about these documents\" (McCarty 2004a, 2004b)(Karsdorp, Kestemont, and Riddell 250)."
    ]
   },
   {
@@ -44,6 +44,14 @@
     "\n",
     "textdir = 'D:\\\\D&D\\\\Hollywood Reporter\\\\Report\\eleven\\\\pdf\\\\'\n",
     "os.chdir(textdir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stage Two: Isolate a component (the example was nouns - try verbs or adjectives) using nltk and prepare appropriate sub-files for comparison on that axis\n",
+    "(Karsdorp, Kestemont, and Riddell 126)."
    ]
   },
   {
@@ -76,14 +84,6 @@
     "# #NLTK is the NLP package we're using\n",
     "import nltk\n",
     "nltk.download('averaged_perceptron_tagger')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Stage Two: Isolate a component (the example was nouns - try verbs or adjectives) using nltk and prepare appropriate sub-files for comparison on that axis\n",
-    "(Karsdorp, Kestemont, and Riddell 126)."
    ]
   },
   {
@@ -148,14 +148,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Stage Four: Run a simple (2 word) vizualization comparing all texts\n",
-    "(Karsdorp, Kestemont, and Riddell 126)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 107,
    "metadata": {},
@@ -186,8 +178,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stage Five: Run a full (PCA) vizualization comparing all texts using the provided PCA boilerplate. Note any interesting characteristics or outliers in a brief analysis\n",
-    "(Karsdorp, Kestemont, and Riddell 126)."
+    "## Stage Four: Run a simple (2 word) vizualization comparing all texts\n",
+    "As the use of visualization has a component to enhance the journey, since \"Problem solving is at the heart of tech\" (Benjamin 11).\n",
+    "(Karsdorp, Kestemont, and Riddell 126)"
    ]
   },
   {
@@ -225,6 +218,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the element of use of PCA direction, \"import sklearn.decomposition\" allows for the comfort to \"reduce the dimensionality of\" the source that is explored (Karsdorp, Kestemont, and Riddell 268). Which takes advantage of the release of a condensed or simplified data set.  And has now formulated a \"two-dimensional summary\" reducing the focus accordingly toward a \"low-dimensional\" data set (Karsdorp, Kestemont, and Riddell 268)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 109,
    "metadata": {},
@@ -249,8 +249,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stage Five: Run a full (PCA) vizualization comparing all texts using the provided PCA boilerplate. Note any interesting characteristics or outliers in a brief analysis\n",
+    "(Karsdorp, Kestemont, and Riddell 126)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, with the introduction to the variance of the \"principal component PC\" (Karsdorp, Kestemont, and Riddell 268) we are able to use the following code to create a data set of visualization to view beyond the authorial form and clustering."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -286,6 +301,101 @@
    "source": [
     "## Bonus Stage: Depending on your interests, you might either try using an API to collect the texts rather than saving them to a directory, or you might use Bokeh to attempt an exportable visualization of some aspect of what you've collected.\n",
     "(Karsdorp, Kestemont, and Riddell 126)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bokeh.models import ColumnDataSource\n",
+    "from bokeh.models.tools import HoverTool\n",
+    "from bokeh.io import output_notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24648/3173760049.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msample\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0msource\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mColumnDataSource\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m p.circle(x='director', y='film',\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sample = df.sample(100)\n",
+    "source = ColumnDataSource(sample)\n",
+    "\n",
+    "p = figure()\n",
+    "p.circle(x='director', y='film',\n",
+    "         source=source,\n",
+    "         size=10, color='green')\n",
+    "\n",
+    "p.title.text = 'Film Blockbuster'\n",
+    "p.xaxis.axis_label = 'Director'\n",
+    "p.yaxis.axis_label = 'Film'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'p' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24648/2179696109.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m ]\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_tools\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhover\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0moutput_notebook\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'p' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "hover = HoverTool()\n",
+    "hover.tooltips=[\n",
+    "    ('Title', '@Name'),\n",
+    "    ('Author', '@Author'),\n",
+    "    ('Year', '@Year'),\n",
+    "    ('Reviews', '@Reviews')\n",
+    "]\n",
+    "\n",
+    "p.add_tools(hover)\n",
+    "\n",
+    "output_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'p' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24648/2343327380.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'p' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "show(p)\n",
+    "save(p)"
    ]
   }
  ],
