--- a/Assignment #11.ipynb
+++ b/Assignment #11.ipynb
@@ -28,9 +28,7 @@
    "source": [
     "## Stage One: Import at least ten documents from files, using the OS module and any others relevant to process the text\n",
     "\n",
-    "I chose the use of the everlong popular Hollywood Reporter, out of respect for the gossip and news of the film industry as well as a defined use of material as \"Modeling depends on source data\" (Drucker 171).\n",
-    "\n",
-    "This enabled the use of Stylometry, which emphasuzes the importance of modeling, to help \"answer questions about these documents\" (McCarty 2004a, 2004b)(Karsdorp, Kestemont, and Riddell 250)."
+    "I chose the use of the famed Hollywood Reporter out of respect for the gossip and news of the film industry as well as a defined use of the material as \"Modeling depends on source data\" (Drucker 171). And the great thing about the reference is that it comes in two forms when subscribing (educational discount), traditional widespread magazine and the .pdf versions.  So, even though it was not my idea to get the magazine subscription as I am not a massive fan of the text, I could now challenge myself with this assignment -ya!. This enabled the use of Stylometry, which emphasizes the importance of modeling, to help \"answer questions about these documents\" (McCarty 2004a, 2004b)(Karsdorp, Kestemont, and Riddell 250)."
    ]
   },
   {
@@ -179,7 +177,8 @@
    "metadata": {},
    "source": [
     "## Stage Four: Run a simple (2 word) vizualization comparing all texts\n",
-    "As the use of visualization has a component to enhance the journey, since \"Problem solving is at the heart of tech\" (Benjamin 11).\n",
+    "The use of visualization has a component to enhance the journey since \"Problem solving is at the heart of tech\" (Benjamin 11).\n",
+    "\n",
     "(Karsdorp, Kestemont, and Riddell 126)"
    ]
   },
@@ -221,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the element of use of PCA direction, \"import sklearn.decomposition\" allows for the comfort to \"reduce the dimensionality of\" the source that is explored (Karsdorp, Kestemont, and Riddell 268). Which takes advantage of the release of a condensed or simplified data set.  And has now formulated a \"two-dimensional summary\" reducing the focus accordingly toward a \"low-dimensional\" data set (Karsdorp, Kestemont, and Riddell 268)."
+    "In the element of use of PCA direction, \"import sklearn.decomposition\" allows for the comfort to \"reduce the dimensionality of\" the source that is explored (Karsdorp, Kestemont, and Riddell 268), which takes advantage of the release of a condensed or simplified data set. Now formulated a \"two-dimensional summary,\" reducing the focus accordingly toward a \"low-dimensional\" data set (Karsdorp, Kestemont, and Riddell 268)."
    ]
   },
   {
@@ -260,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, with the introduction to the variance of the \"principal component PC\" (Karsdorp, Kestemont, and Riddell 268) we are able to use the following code to create a data set of visualization to view beyond the authorial form and clustering."
+    "Now, with the introduction to the variance of the \"principal component PC\" (Karsdorp, Kestemont, and Riddell 268), we can use the following code to create a data set of visualization to view beyond the authorial form and clustering."
    ]
   },
   {
