--- a/Assignment #12.ipynb
+++ b/Assignment #12.ipynb
@@ -32,7 +32,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import wikipedia\n",
+    "import os\n",
+    "path = \"entries/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "authors = [\"Terry Pratchett\", \"Annalee Newitz\", \"Charlie Jane Anders\", \"Octavia Butler\",\"N.K. Jemisin\"]\n",
+    "for author in authors:\n",
+    "    page = wikipedia.page(author)\n",
+    "    print(page.title)\n",
+    "    filename = path + author.replace(\" \",\"_\") + \".txt\"\n",
+    "    with open (filename, \"w\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
+    "        f.write(page.content)\n",
+    "        f.close()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,7 +68,102 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "import numpy as np\n",
+    "\n",
+    "documents = []\n",
+    "path = 'entries/'\n",
+    "\n",
+    "filenames=sorted([os.path.join(path, fn) for fn in os.listdir(path)])\n",
+    "print(len(filenames)) # count files in corpus\n",
+    "print(filenames[:10]) # print names of 1st ten files in corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn.feature_extraction.text as text\n",
+    "\n",
+    "vectorizer=text.CountVectorizer(input='filename', stop_words=\"english\", min_df=1)\n",
+    "dtm=vectorizer.fit_transform(filenames).toarray() # defines document term matrix\n",
+    "\n",
+    "vocab=np.array(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Shape of document-term matrix: {dtm.shape}. '\n",
+    "      f'Number of tokens {dtm.sum()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn.decomposition as decomposition\n",
+    "model = decomposition.LatentDirichletAllocation(\n",
+    "    n_components=100, learning_method='online', random_state=1)\n",
+    "document_topic_distributions = model.fit_transform(dtm)\n",
+    "vocabulary = vectorizer.get_feature_names()\n",
+    "# (# topics, # vocabulary)\n",
+    "assert model.components_.shape == (100, len(vocabulary))\n",
+    "# (# documents, # topics)\n",
+    "assert document_topic_distributions.shape == (dtm.shape[0], 100)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topic_names = [f'Topic {k}' for k in range(100)]\n",
+    "topic_word_distributions = pd.DataFrame(\n",
+    "    model.components_, columns=vocabulary, index=topic_names)\n",
+    "print(topic_word_distributions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topic_word_distributions.loc['Topic 9'].sort_values(ascending=False).head(18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = topic_word_distributions.loc['Topic 2'].sort_values(ascending=False).head(18)\n",
+    "words\n",
+    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "from wordcloud import WordCloud, STOPWORDS\n",
+    "import matplotlib.colors as mcolors\n",
+    "\n",
+    "# Create and generate a word cloud image:\n",
+    "wordcloud = WordCloud().generate_from_frequencies(words)\n",
+    "\n",
+    "# Display the generated image:\n",
+    "plt.imshow(wordcloud, interpolation='bilinear')\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,7 +179,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import nltk\n",
+    "nltk.download('vader_lexicon')\n",
+    "nltk.download('punkt')\n",
+    "\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "sid = SentimentIntensityAnalyzer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for filename in filenames:\n",
+    "    with open(filename, encoding=\"utf-8\") as f:\n",
+    "        text = f.read()\n",
+    "        documents.append(text)\n",
+    "        scores = sid.polarity_scores(text[0:500])\n",
+    "    print(filename)\n",
+    "    for key in sorted(scores):\n",
+    "        print('{0}: {1}, '.format(key, scores[key]), end='')\n",
+    "    print(' ')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,7 +219,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import markovify\n",
+    "import random\n",
+    "generator_text = \"\"\n",
+    "\n",
+    "for document in documents:\n",
+    "    generator_text += document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_model = markovify.Text(text)\n",
+    "print( text_model.make_sentence() )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,7 +252,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "novel = ''\n",
+    "while (len( novel.split(\" \")) < 500):\n",
+    "  for i in range(random.randrange(3,9)):\n",
+    "    novel += text_model.make_sentence() + \" \"\n",
+    "  novel += \"\\n\\n\"\n",
+    "\n",
+    "print(novel)"
+   ]
   },
   {
    "cell_type": "markdown",
