--- a/Assignment #13.ipynb
+++ b/Assignment #13.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stage One: \n",
+    "## Stage One: Import or collect your data as appropriate, using OS or an API\n",
     "\n",
     "(Karsdorp, Kestemont, and Riddell)."
    ]
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stage Two: \n",
+    "## Stage Two: Make and structure your data in a Pandas dataframe\n",
     "\n",
     "(Karsdorp, Kestemont, and Riddell)."
    ]
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stage Three: \n",
+    "## Stage Three: Use NLTK to tokenize the data, and chart a word cloud\n",
     "\n",
     "(Karsdorp, Kestemont, and Riddell)."
    ]
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stage Four: \n",
+    "## Stage Four: Create a \"wordcloud of interest\" by playing with the visualization methods from the class demo, or others documented in the API\n",
     "\n",
     "(Karsdorp, Kestemont, and Riddell)."
    ]
@@ -86,26 +86,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stage Five: \n",
+    "## Stage Five: Import Bokeh and chart some aspect of the text: this could be the wordcount, topics, or sentiment analysis as demoed\n",
     "\n",
     "(Karsdorp, Kestemont, and Riddell)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bonus Stage: \n",
-    "\n",
-    "(Karsdorp, Kestemont, and Riddell).\n",
-    "\n"
    ]
   },
   {
