--- a/Assignment #12.ipynb
+++ b/Assignment #12.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "import wikipedia\n",
     "import os\n",
-    "path = \"entries/\""
+    "path = \"film directors/\""
    ]
   },
   {
@@ -44,11 +44,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "authors = [\"Terry Pratchett\", \"Annalee Newitz\", \"Charlie Jane Anders\", \"Octavia Butler\",\"N.K. Jemisin\"]\n",
-    "for author in authors:\n",
-    "    page = wikipedia.page(author)\n",
+    "directors = [\"Steven Spielberg\", \"George Lucas\", \"Martin Scorsese\", \"Ridley Scott\",\"M. Night Shyamalan\"]\n",
+    "for director in directors:\n",
+    "    page = wikipedia.page(director)\n",
     "    print(page.title)\n",
-    "    filename = path + author.replace(\" \",\"_\") + \".txt\"\n",
+    "    filename = path + director.replace(\" \",\"_\") + \".txt\"\n",
     "    with open (filename, \"w\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
     "        f.write(page.content)\n",
     "        f.close()"
@@ -74,7 +74,7 @@
     "import numpy as np\n",
     "\n",
     "documents = []\n",
-    "path = 'entries/'\n",
+    "path = 'film directors/'\n",
     "\n",
     "filenames=sorted([os.path.join(path, fn) for fn in os.listdir(path)])\n",
     "print(len(filenames)) # count files in corpus\n",
@@ -298,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   },
   "orig_nbformat": 4
  },
