--- a/Assignment #12.ipynb
+++ b/Assignment #12.ipynb
@@ -29,7 +29,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: wikipedia in c:\\users\\dlawb\\anaconda3\\lib\\site-packages (1.4.0)\n",
+      "Requirement already satisfied: beautifulsoup4 in c:\\users\\dlawb\\anaconda3\\lib\\site-packages (from wikipedia) (4.10.0)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.0.0 in c:\\users\\dlawb\\anaconda3\\lib\\site-packages (from wikipedia) (2.26.0)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\dlawb\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2.0.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\dlawb\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (1.26.6)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\dlawb\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2021.10.8)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\dlawb\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.2)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\dlawb\\anaconda3\\lib\\site-packages (from beautifulsoup4->wikipedia) (2.2.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install wikipedia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,21 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'wikipedia' has no attribute 'page'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_20712/1181002335.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mauthors\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"Terry Pratchett\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Annalee Newitz\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Charlie Jane Anders\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Octavia Butler\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"N.K. Jemisin\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mauthor\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mauthors\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mpage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwikipedia\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mauthor\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mfilename\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpath\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mauthor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\" \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"_\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\".txt\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'wikipedia' has no attribute 'page'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "authors = [\"Terry Pratchett\", \"Annalee Newitz\", \"Charlie Jane Anders\", \"Octavia Butler\",\"N.K. Jemisin\"]\n",
     "for author in authors:\n",
@@ -100,7 +113,7 @@
     "import numpy as np\n",
     "\n",
     "documents = []\n",
-    "path = 'film directors/'\n",
+    "path = 'entries/'\n",
     "\n",
     "filenames=sorted([os.path.join(path, fn) for fn in os.listdir(path)])\n",
     "print(len(filenames)) # count files in corpus\n",
@@ -324,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
